src/test/deca/context/invalid/langage_sans_objet/regles_communes/regle_0_1.deca
// Description:
//    regle 0.1 opération partielle
//
// Resultats:
//    Ligne 7: Identificateur non déclaré.
{
    a = 1;
}

// raison : opération partielle
// "Identificateur non déclaré"
